# advent

./: .gitignore
2022/: Cargo.toml
2025/: Cargo.toml
2025/src/: s3.txt
2025/src/01/a01/: Cargo.toml
2025/src/01/a01/src/: main.rs
2025/src/01/b01/: Cargo.toml
2025/src/01/b01/src/: main.rs
2025/src/02/a02/: Cargo.toml
2025/src/02/a02/src/: main.rs
2025/src/02/b02/: Cargo.toml
2025/src/02/b02/src/: main.rs
2025/src/03/a03/: Cargo.toml
2025/src/03/a03/src/: main.rs
2025/src/03/b03/: Cargo.toml
2025/src/03/b03/src/: main.rs
2025/src/04/a04/: Cargo.toml
2025/src/04/a04/src/: main.rs
2025/src/04/b04/: Cargo.toml
2025/src/04/b04/src/: main.rs
2025/src/05/a05/: Cargo.toml
2025/src/05/a05/src/: main.rs
2025/src/05/b05/: Cargo.toml
2025/src/05/b05/src/: main.rs
2025/src/06/a06/: Cargo.toml
2025/src/06/a06/src/: main.rs
2025/src/06/b06/: Cargo.toml
2025/src/06/b06/src/: main.rs
2025/src/07/a07/: Cargo.toml
2025/src/07/a07/src/: main.rs
2025/src/07/b07/: Cargo.toml
2025/src/07/b07/src/: main.rs
2025/src/08/a08/: Cargo.toml
2025/src/08/a08/src/: main.rs
2025/src/08/b08/: Cargo.toml
2025/src/08/b08/src/: main.rs
2025/src/09/a09/: Cargo.toml
2025/src/09/a09/src/: main.rs
2025/src/09/b09/: Cargo.toml
2025/src/09/b09/src/: main.rs
2025/src/10/a10/: Cargo.toml
2025/src/10/a10/src/: main.rs
2025/src/10/b10/: Cargo.toml  main.py  pyproject.toml
2025/src/10/b10/src/: main.rs
2025/src/11/a11/: Cargo.toml
2025/src/11/a11/src/: main.rs
2025/src/11/b11/: Cargo.toml
2025/src/12/a12/: main.py  pyproject.toml
(+270 files in other folders)
